--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Whats app web like chat application.",
   "version": "0.0.1",
   "dependencies": {
+    "dexie": "^1.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
