--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,9 +1,7 @@
 {
   "dependencies": {
-    "cors": "^2.8.4",
     "express": "^4.15.4",
     "json-server": "^0.12.0",
-    "socket.io": "^2.0.3",
-    "standard": "^10.0.3"
+    "socket.io": "^2.0.3"
   }
 }
